updated formatting, researched potential solutions for the pre tag issue, but all I was able to come up with was using Ruby code to break at whole words

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,21 @@
 }
 
 footer {
-	margin-left: 300px;
+	margin: 0 auto;
+  margin-top: 15px;
+  width: 330px;
+}
+
+/*******************
+Tests#index
+*******************/
+.hero {
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+table {
+  margin: 0 auto;
 }
 
 
