--- a/app/assets/stylesheets/tests.css.scss
+++ b/app/assets/stylesheets/tests.css.scss
@@ -6,6 +6,7 @@
 TABLE PROGRAMMING CHALLENGES
 ************************/
 
+
 table {
 	border-collapse: collapse;
 	/*width: 800px;*/
@@ -43,3 +44,6 @@ thead {
 	opacity: 1.0;
 	cursor: pointer;
 }
+
+pre {white-space: pre-wrap;}
+
